--- a/MyApplication/app/src/main/res/layout/monitor.xml
+++ b/MyApplication/app/src/main/res/layout/monitor.xml
@@ -74,6 +74,6 @@
         android:layout_height="252dp"
         android:layout_gravity="center"
         android:layout_marginTop="80dp"
-        android:background="@mipmap/qqq"
+        android:background="@mipmap/qqq"/>
 
 </LinearLayout>
