--- a/MyApplication/app/src/main/res/layout/yveda.xml
+++ b/MyApplication/app/src/main/res/layout/yveda.xml
@@ -75,6 +75,6 @@
         android:layout_height="230dp"
         android:layout_gravity="center"
         android:background="@mipmap/yyy"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="80dp"/>
 
 </LinearLayout>
